--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ Block-15 Віктор Зварич -->
                     <span class="hero__name">Ryan Allen</span>
                 </h1>
                 <div class="hero__line short-line"></div>
-                <p class="hero__subtitle subtitle uppercase">A New York based photographer specializing in women’s and men’s
+                <p class="hero__subtitle subtitle uppercase">A New York based photographer specializing in women’s and
+                    men’s
                     fashion, street style, event, and portrait photography.</p>
                 <a href="#contact-form" class="secondary-btn uppercase">Contact Ryan</a>
                 <img class="hero__image-dots" src="img/dots.svg" alt="Three dots">
@@ -75,7 +76,7 @@ Block-15 Віктор Зварич -->
             </div>
         </section>
     </header>
-    
+
     <main class="main">
         <!--Block-2 Oleksii Novosiadlo-->
         <section id="about">
@@ -118,18 +119,18 @@ Block-15 Віктор Зварич -->
             <p class="latest-work__text">Ryan's passion is photoshoots for lookbook
                 and commercial.</p>
             <div class="latest-work__photos">
-                <div class="latest-work__image latest-work__image__girl-sun latest-work__fade"><img src="img/girl_hides_from_sun.png" 
-                        alt="Girl hides from the sun">
+                <div class="latest-work__image latest-work__image__girl-sun latest-work__fade"><img
+                        src="img/girl_hides_from_sun.png" alt="Girl hides from the sun">
                 </div>
-                <div class="latest-work__image latest-work__image__girl-turn latest-work__fade"><img src="img/girl_in_a_half_turn.png"
-                        alt="A girl in a half turn">
+                <div class="latest-work__image latest-work__image__girl-turn latest-work__fade"><img
+                        src="img/girl_in_a_half_turn.png" alt="A girl in a half turn">
                 </div>
-                <div class="latest-work__image latest-work__image__girl-jaket latest-work__fade"><img src="img/beautiful_girl_in_jacket.png"
-                        alt="Beatiful girl in a jacket">
+                <div class="latest-work__image latest-work__image__girl-jaket latest-work__fade"><img
+                        src="img/beautiful_girl_in_jacket.png" alt="Beatiful girl in a jacket">
                 </div>
                 <div class="latest-work__prev__container">
                     <a class="latest-work__prev" onclick="plusSlides(-1)">❮</a>
-                </div> 
+                </div>
                 <a class="latest-work__next" onclick="plusSlides(1)">❯</a>
             </div>
         </div>
@@ -216,7 +217,7 @@ Block-15 Віктор Зварич -->
                 <h5>RYAN HAD GREAT PLEASURE OF WORKING WITH THE FOLLOWING BRANDS.</h5>
             </header>
             <div>
-                <div>"<"</div>
+                <div>"<"< /div>
                         <!--Replace with the real arrow-->
                         <div>
                             <img src="./img/cosmo.png" alt="Cosmolitan" />
@@ -472,7 +473,6 @@ Block-15 Віктор Зварич -->
                                     </details>
                                 </div>
                             </section>
-                            </main>
                             <!-- Khrystyna Broshko -->
                             <div class="main_form">
                                 <div class="main_background_for_form">
@@ -513,6 +513,8 @@ Block-15 Віктор Зварич -->
                                     </div>
                                 </div>
                             </div>
+                            </main>
+
                             <!-- Block-15 Віктор Зварич -->
                             <footer class="footer">
                             </footer>
