--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@ Block-15 Віктор Зварич -->
                 </div>
                 <div class="latest-work__prev__container">
                     <a class="latest-work__prev" onclick="plusSlides(-1)">❮</a>
-                </div> 
-                <a class="latest-work__next" onclick="plusSlides(1)">❯</a>
+                </div > 
+                <div class="latest-work__next__container">
+                    <a class="latest-work__next" onclick="plusSlides(1)">❯</a>
+                </div>
             </div>
         </div>
         <!-- Block-4 bandura roman -->
