--- a/index.html
+++ b/index.html
@@ -130,13 +130,12 @@ Block-15 Віктор Зварич -->
                 </div>
                 <div class="latest-work__prev__container">
                     <a class="latest-work__prev" onclick="plusSlides(-1)">❮</a>
-                </div > 
+                </div>
                 <div class="latest-work__next__container">
                     <a class="latest-work__next" onclick="plusSlides(1)">❯</a>
                 </div>
-                </div>
-                <a class="latest-work__next" onclick="plusSlides(1)">❯</a>
             </div>
+        </div>
         </div>
         <!-- Block-4 bandura roman -->
         <section id="services">
@@ -417,95 +416,94 @@ Block-15 Віктор Зварич -->
                 </details>
             </div>
         </section>
- <!-- Khrystyna Broshko -->
- <div class="main_form">
-    <div class="main_background_for_form">
-        <div class="background_for_form">
-            <div class="page_form">
-                <div class="block-form">
-                    <div class="text_form">
-                        Let`s start a conversation.
-                        <hr>
-                    </div>
-                    <div class="sub_text_form">
-                        RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND
-                        IDEAS.
-                    </div>
-                    <div class="forms">
-                        <form action="https://formspree.io/f/mwkzwgke" method="post">
-                            <div class="full_name_form"> <input type='text' name='firstname'
-                                    value="Enter your full name*">
+        <!-- Khrystyna Broshko -->
+        <div class="main_form">
+            <div class="main_background_for_form">
+                <div class="background_for_form">
+                    <div class="page_form">
+                        <div class="block-form">
+                            <div class="text_form">
+                                Let`s start a conversation.
+                                <hr>
                             </div>
-                            <div class="full_name_form"><input type='text'
-                                    name='phone_number' value="Enter your phone number*">
+                            <div class="sub_text_form">
+                                RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND
+                                IDEAS.
                             </div>
-                            <br><br>
-                            <div class="date_form"><label for="date">Choose date</label>
-                                <input type="date" id="date" name="date">
-                            </div>
-                            <br><br>
-                            <div class="full_name_form"><input type='text' name='message'
-                                    value="Leave your message"></div>
-                            <br><br>
-                            <input type='submit' class="button-submit"
-                                value='REQUEST A QUOTE'>
+                            <div class="forms">
+                                <form action="https://formspree.io/f/mwkzwgke" method="post">
+                                    <div class="full_name_form"> <input type='text' name='firstname'
+                                            value="Enter your full name*">
+                                    </div>
+                                    <div class="full_name_form"><input type='text' name='phone_number'
+                                            value="Enter your phone number*">
+                                    </div>
+                                    <br><br>
+                                    <div class="date_form"><label for="date">Choose date</label>
+                                        <input type="date" id="date" name="date">
+                                    </div>
+                                    <br><br>
+                                    <div class="full_name_form"><input type='text' name='message'
+                                            value="Leave your message"></div>
+                                    <br><br>
+                                    <input type='submit' class="button-submit" value='REQUEST A QUOTE'>
 
-                        </form>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
     </main>
 
-                            <!--Block-13 Olha Stanislavska-->
-                            <section class="faq">
-                                <h2 class="faq__title h2-title text-align-center">FAQ</h2>
-                                <hr class="faq__line line line-center">
-                                <div class="faq__all-questions">
-                                    <details class="faq__question">
-                                        <summary>Does Ryan shoot only in New York?</summary>
-                                        Most of Ryan's projects are in New York but shooting is possible in other cities
-                                        of the USA and
-                                        other countries upon request.
-                                    </details>
-                                    <details class="faq__question">
-                                        <summary>How long does the editing take?</summary>
-                                        It all depends on the amount of footage and the number of photos that go through
-                                        retouching.
-                                    </details>
-                                    <details class="faq__question">
-                                        <summary>What does Ryan shoot?</summary>
-                                        Ryan is a real guru of fashion, event, commercial photography, and portraits.
-                                    </details>
-                                    <details class="faq__question">
-                                        <summary>How to schedule a shooting?</summary>
-                                        Fill out the form below or contact Ryan directly. Tell which date you need, and
-                                        Ryan will do his
-                                        best to find a time slot for you.
-                                    </details>
-                                    <details class="faq__question">
-                                        <summary>What if I have a creative idea for shooting?</summary>
-                                        Ryan is open for inquires and interesting opportunities. TFP shoots are possible
-                                        if your idea is
-                                        really creative.
-                                    </details>
-                                    <details class="faq__question">
-                                        <summary>Where can I find Ryan's works?</summary>
-                                        Ryan's works are published in different fashion magazines: Haper's Bazaar,
-                                        Vogue, Cosmopolitan,
-                                        and
-                                        many others.
-                                    </details>
-                                </div>
-                            </section>
-                           
-                            </main>
+    <!--Block-13 Olha Stanislavska-->
+    <section class="faq">
+        <h2 class="faq__title h2-title text-align-center">FAQ</h2>
+        <hr class="faq__line line line-center">
+        <div class="faq__all-questions">
+            <details class="faq__question">
+                <summary>Does Ryan shoot only in New York?</summary>
+                Most of Ryan's projects are in New York but shooting is possible in other cities
+                of the USA and
+                other countries upon request.
+            </details>
+            <details class="faq__question">
+                <summary>How long does the editing take?</summary>
+                It all depends on the amount of footage and the number of photos that go through
+                retouching.
+            </details>
+            <details class="faq__question">
+                <summary>What does Ryan shoot?</summary>
+                Ryan is a real guru of fashion, event, commercial photography, and portraits.
+            </details>
+            <details class="faq__question">
+                <summary>How to schedule a shooting?</summary>
+                Fill out the form below or contact Ryan directly. Tell which date you need, and
+                Ryan will do his
+                best to find a time slot for you.
+            </details>
+            <details class="faq__question">
+                <summary>What if I have a creative idea for shooting?</summary>
+                Ryan is open for inquires and interesting opportunities. TFP shoots are possible
+                if your idea is
+                really creative.
+            </details>
+            <details class="faq__question">
+                <summary>Where can I find Ryan's works?</summary>
+                Ryan's works are published in different fashion magazines: Haper's Bazaar,
+                Vogue, Cosmopolitan,
+                and
+                many others.
+            </details>
+        </div>
+    </section>
 
-                            <!-- Block-15 Віктор Зварич -->
-                            <footer class="footer">
-                            </footer>
+    </main>
+
+    <!-- Block-15 Віктор Зварич -->
+    <footer class="footer">
+    </footer>
 </body>
 
 </html>
