fix img size block 2

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Block-15 Віктор Зварич -->
         <!--Block-2 Oleksii Novosiadlo-->
         <section id="about">
             <div class="main__photo-of-girl">
-                <img class="main__photo-of-girl" src="img/photographer_takes_a_photo_of_the_girl.png"
+                <img class="main__photo-of-girl_img " src="img/photographer_takes_a_photo_of_the_girl.png"
                     alt="Photographer takes a photo of the girl.">
             </div>
             <div class="about__container">
