fixed logo link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Block-15 Віктор Зварич -->
     <!-- Block-0 Віктор Зварич -->
     <header class="header">
         <nav class="header__nav">
-            <a href="/" class="header__logo">
+            <a href="./" class="header__logo">
                 <img class="header__logo-image" src="img/logo.svg" width="174"
                     alt="Logo image of the 'R.Allen Photography' website">
             </a>
