added burger menu

--- a/index.html
+++ b/index.html
@@ -33,30 +33,37 @@ Block-15 Віктор Зварич -->
     <!-- Block-0 Віктор Зварич -->
     <header class="header">
         <nav class="header__nav">
-            <a href="./" class="header__logo">
-                <img class="header__logo-image" src="img/logo.svg" width="174"
-                    alt="Logo image of the 'R.Allen Photography' website">
-            </a>
-            <ul class="nav-menu">
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#about">About</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#services">Services</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#works">Latest works</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#pricing">Pricing</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#testimonials">Testimonials</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#contact-form">Contact Ryan</a>
-                </li>
-            </ul>
+            <div class="nav-logo">
+                <a href="./" class="header__logo">
+                    <img class="header__logo-image" src="img/logo.svg" width="174"
+                        alt="Logo image of the 'R.Allen Photography' website">
+                </a>
+                <div class="nav-burger">
+                    <span></span>
+                </div>
+            </div>  
+            <div class="nav-wrapper">
+                <ul class="nav-menu">
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#about">About</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#services">Services</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#works">Latest works</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#pricing">Pricing</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#testimonials">Testimonials</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#contact-form">Contact Ryan</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <!-- Block-1  Віктор Зварич -->
         <section class="hero">
@@ -504,6 +511,7 @@ Block-15 Віктор Зварич -->
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
     </footer>
+    <script src="js/header.js"></script>
 </body>
 
 </html>
