changed line class

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ Block-15 Віктор Зварич -->
         <section class="pricing">
             <section>
             <h2 class="h2-title text-align-center">Pricing</h2>
-            <hr class="line line-center">
+            <hr class="latest-work__line">
             <p class="subtitle uppercase">the cost of shooting can be discussed according to the conditions.</p>
             </section>
             <section>
