--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Block-15 Віктор Зварич -->
         <!--Block-6 Oleh Onopriichuk-->
         <section class="why_ryan">
             <h2 class="why_ryan__title">Why Ryan?</h2>
-            <hr class="why_ryan _line line line-center">
+            <hr class="why_ryan__line">
             <p class="why_ryan__second_title">Photography has truly become a huge part of Ryan`s life.</p>
             <div class="why_ryan__icons">
                 <div class="why_ryan__icons_cards">
