added css services

--- a/index.html
+++ b/index.html
@@ -144,37 +144,81 @@ Block-15 Віктор Зварич -->
             </div>
         </div>
         <!-- Block-4 bandura roman -->
-        <section id="services">
-            <h2 class="services">Services</h2>
+        <section class="services-section" id="services">
+            <h2 class="services-title">Services</h2>
             <hr class="main__banner-line">
-            <p class="opportunitties">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
-            <ul class="services__info">
-                <li class="portraits">
-                    <img class="aperture-icon" src="img/aperture-icon.png" alt="aperture-icon">
-                    <h3 class="sevrvices__portraits">Portraits</h3>
-                    <p class="services__portraits__big-text">Setting the right accents in beautiful portraits.</p>
-                    <a class="services__portraits__request-a-quote" href="#">REQUEST A QUOTE</a>
-                </li>
-                <li class="streetphoto">
-                    <img class="streetphoto-icon" src="img/streetphoto-icon.png" alt="streetphoto-icon">
-                    <h3 class="sevrvices__street-style">Street Style</h3>
-                    <p class="services__street-style__big-text">Catching the brightest moments in the scenery of the big
-                        city.</p>
-                    <a class="services__street-style__request-a-quote" href="#">REQUEST A QUOTE</a>
-                </li>
-                <li class="advertising">
-                    <img class="camera-icon" src="img/camera-icon.png" alt="camera-icon">
-                    <h3 class="services__advertising">Advertising</h3>
-                    <p class="services__advertising__big-text">Shootings for advertising campaigns and e-commerce.</p>
-                    <a class="services__advertising__request-a-quote" href="#">REQUEST A QUOTE</a>
-                </li>
-                <li class="events">
-                    <img class="lens-icon" src="img/lens-icon.png" alt="lens-icon">
-                    <h3 class="services__events">Events</h3>
-                    <p class="services__events__big-text">Setting the right accents in beautiful portraits.</p>
-                    <a class="services__events__request-a-quote" href="#">REQUEST A QUOTE</a>
-                </li>
-            </ul>
+            <p class="opportunitties-text">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
+            <div class="section__services__list">
+                <ul class="services__info">
+                    <div class="section__services__portraits">
+                        <li class="portraits">
+                            <div class="img__services-icon">
+                                <img class="aperture-icon" src="icons/aperture-icon.svg" alt="aperture-icon">
+                            </div>
+                            <div class="h3__services-title">
+                                <h3 class="sevrvices__portraits-title">Portraits</h3>
+                            </div>
+                            <div class="services-text">
+                                <p class="services__portraits__text">Setting the right accents in beautiful portraits.</p>
+                            </div>
+                            <div class="services__request-a-quote">
+                                <a class="services__portraits__request-a-quote" href="#">REQUEST A QUOTE</a>
+                            </div>
+                        </li>
+                    </div>
+                    <div class="section__services__streerphoto">
+                        <li class="streetphoto">
+                            <div class="img__services-icon">
+                                <img class="streetphoto-icon" src="icons/streetphoto-icon.svg" alt="streetphoto-icon">
+                            </div>
+                            <div class="h3__services-title">
+                                <h3 class="sevrvices__street-style-title">Street Style</h3>
+                            </div>
+                            <div class="services-text">
+                                <p class="services__street-style__text">Catching the brightest moments in the scenery of the
+                                    big city.
+                                </p>
+                            </div>
+                            <div class="services__request-a-quote">
+                                <a class="services__street-style__request-a-quote" href="#">REQUEST A QUOTE</a>
+                            </div>
+                        </li>
+                    </div>
+                    <div class="section__services__advertising">
+                        <li class="advertising">
+                            <div class="img__services-icon">
+                                <img class="camera-icon" src="icons/camera-icon.svg" alt="camera-icon">
+                            </div>
+                            <div class="h3__services-title">
+                                <h3 class="services__advertising-title">Advertising</h3>
+                            </div>
+                            <div class="services-text">
+                                <p class="services__advertising__text">Shootings for advertising campaigns and e-commerce.
+                                </p>
+                            </div>
+                            <div class="services__request-a-quote">
+                                <a class="services__advertising__request-a-quote" href="#">REQUEST A QUOTE</a>
+                            </div>
+                        </li>
+                    </div>
+                    <div class="section__services__events">
+                        <li class="events">
+                            <div class="img__services-icon">
+                                <img class="lens-icon" src="icons/lens-icon.svg" alt="lens-icon">
+                            </div>
+                            <div class="h3__services-title">
+                                <h3 class="services__events-title">Events</h3>
+                            </div>
+                            <div class="services-text">
+                                <p class="services__events__text">Setting the right accents in beautiful portraits.</p>
+                            </div>
+                            <div class="services__request-a-quote">
+                                <a class="services__events__request-a-quote" href="#">REQUEST A QUOTE</a>
+                            </div>
+                        </li>
+                    </div>
+                </ul>
+            </div>
         </section>
         <!--Block-6 Oleh Onopriichuk-->
         <section class="why_ryan">
