--- a/index.html
+++ b/index.html
@@ -509,6 +509,39 @@ Block-15 Віктор Зварич -->
     </main>
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
+        <nav class="footer__nav">
+            <div class="nav-logo">
+                <a href="./" class="footer__logo">
+                    <img class="footer__logo-image" src="img/logo.svg" width="174"
+                        alt="Logo image of the 'R.Allen Photography' website">
+                </a>
+            </div>
+            <ul class="nav-menu">
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#about">About</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#services">Services</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#works">Latest works</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#pricing">Pricing</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#testimonials">Testimonials</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#contact-form">Contact Ryan</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="footer__line"></div>
+        <div class="footer__container">
+            <p>© Created by 725-team-03</p>
+            <p>All rights Reserved</p>
+        </div>
     </footer>
     <script src="js/header.js"></script>
 </body>
