--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Block-15 Віктор Зварич -->
                     <span class="hero__profession uppercase">Fashion photographer</span>
                     <span class="hero__name">Ryan Allen</span>
                 </h1>
-                <div class="hero__line short-line"></div>
+                <div class="hero__line"></div>
                 <p class="hero__subtitle subtitle uppercase">A New York based photographer specializing in women’s and
                     men’s
                     fashion, street style, event, and portrait photography.</p>
