added aria-labelledby for navs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Block-15 Віктор Зварич -->
 <body>
     <!-- Block-0 Віктор Зварич -->
     <header class="header">
-        <nav class="header__nav">
+        <nav class="header__nav" aria-labelledby="primary-navigation">
             <div class="nav-logo">
                 <a href="./" class="header__logo">
                     <img class="header__logo-image" src="img/logo.svg" width="174"
@@ -509,7 +509,7 @@ Block-15 Віктор Зварич -->
     </main>
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
-        <nav class="footer__nav">
+        <nav class="footer__nav" aria-labelledby="footer-navigation">
             <div class="nav-logo">
                 <a href="./" class="footer__logo">
                     <img class="footer__logo-image" src="img/logo.svg" width="174"
