added script for automatic save scripy

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>R.Allen Photography</title>
     <link rel="shortcut icon" type="image/png" href="icons/tab-icone.png" sizes="16x16">
     <link rel="stylesheet" href="css/index.css">
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <script type="text/javascript" src="js/works.js"></script>
 </head>
 
@@ -345,7 +346,7 @@ Block-15 Віктор Зварич -->
         <!--Block-9 Myroniuk Marta-->
         <section>
             <header id="collaboration">
-                <h1>Collaboration</h1>
+                <h1 class="h2-title ">Collaboration</h1>
                 <hr />
                 <h5>LET'S CREATE SOMETHING GREAT AND BEAUTIFUL TOGETHER.</h5>
             </header>
