edit collaboration head

--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@ Block-15 Віктор Зварич -->
         <!--Block-9 Myroniuk Marta-->
         <section>
             <header id="collaboration">
-                <h1 class="h2-title ">Collaboration</h1>
-                <hr />
-                <h5>LET'S CREATE SOMETHING GREAT AND BEAUTIFUL TOGETHER.</h5>
+                <h1 class="h2-title text-align-center">Collaboration</h1>
+                <div class="line line-center"></div>
+                <h6 class="subtitle text-align-center">LET'S CREATE SOMETHING GREAT AND BEAUTIFUL TOGETHER.</h6>
             </header>
             <div>
                 <img src="./img/section-9-women-on-the-chair.png" alt="Woman on the chair" />
