--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Block-15 Віктор Зварич -->
 <body>
     <!-- Block-0 Віктор Зварич -->
     <header class="header">
-        <nav class="header__nav" aria-labelledby="primary-navigation">
+        <nav class="header__nav" aria-label="primary-navigation">
             <div class="nav-logo">
                 <a href="./" class="header__logo">
                     <img class="header__logo-image" src="img/logo.svg" width="174"
@@ -510,7 +510,7 @@ Block-15 Віктор Зварич -->
     </main>
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
-        <nav class="footer__nav" aria-labelledby="footer-navigation">
+        <nav class="footer__nav" aria-label="footer-navigation">
             <div class="nav-logo">
                 <a href="./" class="footer__logo">
                     <img class="footer__logo-image" src="img/logo.svg" width="174"
