--- a/index.html
+++ b/index.html
@@ -467,47 +467,51 @@ Block-15 Віктор Зварич -->
                 </details>
             </div>
         </section>
-        <!-- Khrystyna Broshko -->
-        <div class="main_form">
-            <div class="main_background_for_form">
-                <div class="background_for_form">
-                    <div class="page_form">
-                        <div class="block-form">
-                            <div class="text_form">
-                                Let`s start a conversation.
-                                <hr>
-                            </div>
-                            <div class="sub_text_form">
-                                RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND
-                                IDEAS.
-                            </div>
-                            <div class="forms">
-                                <form action="https://formspree.io/f/mwkzwgke" method="post">
-                                    <div class="full_name_form"> <input type='text' name='firstname'
-                                            value="Enter your full name*">
-                                    </div>
-                                    <div class="full_name_form"><input type='text' name='phone_number'
-                                            value="Enter your phone number*">
-                                    </div>
-                                    <br><br>
-                                    <div class="date_form"><label for="date">Choose date</label>
-                                        <input type="date" id="date" name="date">
-                                    </div>
-                                    <br><br>
-                                    <div class="full_name_form"><input type='text' name='message'
-                                            value="Leave your message"></div>
-                                    <br><br>
-                                    <input type='submit' class="button-submit" value='REQUEST A QUOTE'>
+      <!-- Khrystyna Broshko -->
+      <div class="main_form">
+        <div class="main_background_for_form">
+            <div class="background_for_form">
+                <div class="page_form">
+                    <div class="block-form">
+                        <div class="text_form">
+                            Let`s start a conversation.
 
-                                </form>
-                            </div>
+                        </div>
+                        <div class="hr_1"></div>
+                        <div class="sub_text_form">
+                            RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND
+                            IDEAS.
+                        </div>
+
+                        <div class="forms">
+                            <form action="https://formspree.io/f/mwkzwgke" method="post">
+                                <div class="full_name_form"> <input type='text' name='firstname'
+                                        value="Enter your full name*">
+                                </div>
+                                <div class="full_name_form"><input type='text' name='phone_number'
+                                        value="Enter your phone number*">
+                                </div>
+                                <br><br>
+                                <div class="date_form"><label for="date">Choose date</label>
+                                    <input type="date" id="date" name="date">
+                                </div>
+                                <br><br>
+                                <div class="full_name_form"><input type='text' name='message'
+                                        value="Leave your message"></div>
+                                <br><br>
+                                <div class="button_style">
+                                    <input type='submit' class="button-submit" value='REQUEST A QUOTE'>
+                                </div>
+
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        
-    </main>
+    </div>
+</main>
+
     <!-- Block-15 Віктор Зварич -->
     <footer class="footer">
         <nav class="footer__nav" aria-label="footer-navigation">
