--- a/index.html
+++ b/index.html
@@ -145,81 +145,37 @@ Block-15 Віктор Зварич -->
             </div>
         </div>
         <!-- Block-4 bandura roman -->
-        <section class="services-section" id="services">
-            <h2 class="services-title">Services</h2>
+        <section class="section-services" id="services">
+            <h2 class="section__services-title">Services</h2>
             <hr class="main__banner-line">
-            <p class="opportunitties-text">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
-            <div class="section__services__list">
-                <ul class="services__info">
-                    <div class="section__services__portraits">
-                        <li class="portraits">
-                            <div class="img__services-icon">
-                                <img class="aperture-icon" src="icons/aperture-icon.svg" alt="aperture-icon">
-                            </div>
-                            <div class="h3__services-title">
-                                <h3 class="sevrvices__portraits-title">Portraits</h3>
-                            </div>
-                            <div class="services-text">
-                                <p class="services__portraits__text">Setting the right accents in beautiful portraits.</p>
-                            </div>
-                            <div class="services__request-a-quote">
-                                <a class="services__portraits__request-a-quote" href="#">REQUEST A QUOTE</a>
-                            </div>
-                        </li>
-                    </div>
-                    <div class="section__services__streerphoto">
-                        <li class="streetphoto">
-                            <div class="img__services-icon">
-                                <img class="streetphoto-icon" src="icons/streetphoto-icon.svg" alt="streetphoto-icon">
-                            </div>
-                            <div class="h3__services-title">
-                                <h3 class="sevrvices__street-style-title">Street Style</h3>
-                            </div>
-                            <div class="services-text">
-                                <p class="services__street-style__text">Catching the brightest moments in the scenery of the
-                                    big city.
-                                </p>
-                            </div>
-                            <div class="services__request-a-quote">
-                                <a class="services__street-style__request-a-quote" href="#">REQUEST A QUOTE</a>
-                            </div>
-                        </li>
-                    </div>
-                    <div class="section__services__advertising">
-                        <li class="advertising">
-                            <div class="img__services-icon">
-                                <img class="camera-icon" src="icons/camera-icon.svg" alt="camera-icon">
-                            </div>
-                            <div class="h3__services-title">
-                                <h3 class="services__advertising-title">Advertising</h3>
-                            </div>
-                            <div class="services-text">
-                                <p class="services__advertising__text">Shootings for advertising campaigns and e-commerce.
-                                </p>
-                            </div>
-                            <div class="services__request-a-quote">
-                                <a class="services__advertising__request-a-quote" href="#">REQUEST A QUOTE</a>
-                            </div>
-                        </li>
-                    </div>
-                    <div class="section__services__events">
-                        <li class="events">
-                            <div class="img__services-icon">
-                                <img class="lens-icon" src="icons/lens-icon.svg" alt="lens-icon">
-                            </div>
-                            <div class="h3__services-title">
-                                <h3 class="services__events-title">Events</h3>
-                            </div>
-                            <div class="services-text">
-                                <p class="services__events__text">Setting the right accents in beautiful portraits.</p>
-                            </div>
-                            <div class="services__request-a-quote">
-                                <a class="services__events__request-a-quote" href="#">REQUEST A QUOTE</a>
-                            </div>
-                        </li>
-                    </div>
-                </ul>
-            </div>
+            <p class="section__services-text">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
+            <ul class="services__list">
+                <li class="services-list__item">
+                    <img class="services-list-item__icon" src="img/aperture-icon.svg" alt="aperture-icon">
+                    <h3 class="services-list__title">Portraits</h3>
+                    <p class="services-list__text">Setting the right accents in beautiful portraits.</p>
+                    <a class="services-list__link" href="#">REQUEST A QUOTE</a>
+                </li>
+                <li class="services-list__item">
+                    <img class="services-list-item__icon" src="img/streetphoto-icon.svg" alt="streetphoto-icon">
+                    <h3 class="services-list__title">Street Style</h3>
+                    <p class="services-list__text">Catching the brightest moments in the scenery of the big
+                        city.</p>
+                    <a class="services-list__link" href="#">REQUEST A QUOTE</a>
+                </li>
+                <li class="services-list__item">
+                    <img class="services-list-item__icon" src="img/camera-icon.svg" alt="camera-icon">
+                    <h3 class="services-list__title">Advertising</h3>
+                    <p class="services-list__text">Shootings for advertising campaigns and e-commerce.</p>
+                    <a class="services-list__link" href="#">REQUEST A QUOTE</a>
+                </li>
+                <li class="services-list__item">
+                    <img class="services-list-item__icon" src="img/lens-icon.svg" alt="lens-icon">
+                    <h3 class="services-list__title">Events</h3>
+                    <p class="services-list__text">Setting the right accents in beautiful portraits.</p>
+                    <a class="services-list__link" href="#">REQUEST A QUOTE</a>
+                </li>
+            </ul>
         </section>
         <!--Block-6 Oleh Onopriichuk-->
         <section class="why_ryan">
