fixed css and html section-services

--- a/index.html
+++ b/index.html
@@ -151,26 +151,26 @@ Block-15 Віктор Зварич -->
             <p class="section__services-text">RYAN IS OPEN FOR NEW OPPORTUNITIES AND COLLABORATIONS.</p>
             <ul class="services__list">
                 <li class="services-list__item">
-                    <img class="services-list-item__icon" src="img/aperture-icon.svg" alt="aperture-icon">
+                    <img class="services-list-item__icon" src="icons/aperture-icon.svg" alt="aperture-icon">
                     <h3 class="services-list__title">Portraits</h3>
                     <p class="services-list__text">Setting the right accents in beautiful portraits.</p>
                     <a class="services-list__link" href="#">REQUEST A QUOTE</a>
                 </li>
                 <li class="services-list__item">
-                    <img class="services-list-item__icon" src="img/streetphoto-icon.svg" alt="streetphoto-icon">
+                    <img class="services-list-item__icon" src="icons/streetphoto-icon.svg" alt="streetphoto-icon">
                     <h3 class="services-list__title">Street Style</h3>
                     <p class="services-list__text">Catching the brightest moments in the scenery of the big
                         city.</p>
                     <a class="services-list__link" href="#">REQUEST A QUOTE</a>
                 </li>
                 <li class="services-list__item">
-                    <img class="services-list-item__icon" src="img/camera-icon.svg" alt="camera-icon">
+                    <img class="services-list-item__icon" src="icons/camera-icon.svg" alt="camera-icon">
                     <h3 class="services-list__title">Advertising</h3>
                     <p class="services-list__text">Shootings for advertising campaigns and e-commerce.</p>
                     <a class="services-list__link" href="#">REQUEST A QUOTE</a>
                 </li>
                 <li class="services-list__item">
-                    <img class="services-list-item__icon" src="img/lens-icon.svg" alt="lens-icon">
+                    <img class="services-list-item__icon" src="icons/lens-icon.svg" alt="lens-icon">
                     <h3 class="services-list__title">Events</h3>
                     <p class="services-list__text">Setting the right accents in beautiful portraits.</p>
                     <a class="services-list__link" href="#">REQUEST A QUOTE</a>
